# universal-mod-manager

./: index.html  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/nexus/: mod.rs  models.rs
src-tauri/src/steam_lib/: mod.rs
src/api/: index.ts
src/components/: TopBar.tsx
src/components/nav/: index.tsx
src/state/: index.ts
src/state/gameReducer/: index.ts
