[package]
name = "universal_mod_manager"
version = "0.0.1-alpha"
description = "A cross-platform game mod manager"
authors = ["Devin Bidwell"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
tokio = {version = "1.21.1", features = ["full"] }
reqwest = {version = "0.11.11", features = ["json"] }
dotenv = {version = "0.15.0"}
anyhow = {version = "1.0.65"}
thiserror = {version = "1.0.35"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
